--- a/WebSocker+RabbitMq/index-stomp.html
+++ b/WebSocker+RabbitMq/index-stomp.html
@@ -6,40 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script type="text/javascript" src="./stomp.js"></script>
     <title>index-websocket+rabbitmq</title>
-    <style>
-        table tbody tr.odd {
-            background-color: #f7f7f7;
-        }
-
-        table tbody tr.even {
-            background-color: #fff;
-        }
-
-        table tbody tr:hover {
-            background-color: rgb(9, 245, 9);
-        }
-
-        table tbody td {
-            color: rgb(14, 13, 13);
-            padding: 2px;
-            border: 0;
-        }
-
-        table tbody tr:hover td {
-            color: #444;
-        }
-
-        table,
-        table tr th,
-        table tr td {
-            border: 1px solid #0094ff;
-        }
-
-        table {
-            text-align: center;
-            border-collapse: collapse;
-        }
-    </style>
+    <link rel="stylesheet" href="base.css">
 </head>
 
 <body>
